--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -42,8 +42,9 @@
 
 
 /* --------------------- Fields & Labels --------------------- */
-.profile-label {
-    font-size: 12px;
+.profile-card .profile-label,
+strong.profile-label {
+    /* font-size: 12px; */
     color: #cfe1ff;
     margin-bottom: 6px;
 }
@@ -51,11 +52,12 @@
     margin-left: 8px;
 }
 .profile-role {
-    margin-top: 6px;
-    color: #a6b8d9;
+    /* margin-top: 6px; */
+    /* color: #cfe1ff; */
 }
 .profile-field {
     display: block;
+    font-weight: bold;
 }
 
 
@@ -103,11 +105,12 @@
 
 /* --------------------- Messages --------------------- */
 .message {
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
 
 /* Message modifiers for success / error */
 .message--error {
+    margin-top: 5px;
     color: #ff6b6b;
 }
 .message--success {
@@ -116,7 +119,7 @@
 
 /* Small message shown next to password buttons */
 .pw-message {
-    align-self: center;
+    /* align-self: center; */
 }
 
 /* Utility to make a field span full grid width */
