--- a/client/src/components/margin_management/MarginTable.css
+++ b/client/src/components/margin_management/MarginTable.css
@@ -11,10 +11,12 @@
   margin-bottom: 8px;
 }
 
-.create-btn {
+/* .create-btn {
   background-color: #3b82f6;
   color: white;
   border: none;
+
+
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
@@ -25,7 +27,26 @@
 
 .create-btn:hover {
   background-color: #2563eb;
+} */
+
+.create-btn {
+	background: transparent;
+	border: 1px solid #21303a;
+	color: #cbd5e1;
+	
+	padding: 6px 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: background 0.2s;
+  font-size: 1em;
 }
+
+.create-btn:hover {
+	border-color: #33506d;
+}
+
+
 
 
 
